# svtmp

./: .readthedocs.yaml  LICENSE  README.md  README.rst  clean.py  gpush.py  pyproject.toml  rundocs.py  upload.py
docs/: conf.py  genbadges  genbadges~  index.rst  requirements.in  requirements.txt  svtmp.rst
examples/: dff.py  th_enc.py
svtmp/: __init__.py
test/: test_regression.py  test_regression.py~
